# TranslinguIsticNLP

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: dashboard.py
artifacts/: articles_preview.jsonl
config/: pipeline.yaml  pipeline_5.yaml  pipeline_synthetic.yaml
data/: artificial_articles.jsonl  sample_articles.jsonl
mage/: README.md  metadata.yaml
mage/blocks/: run_pipeline_block.py  train_gnn_block.py
mage/mage_data/src/: mage-ai.db
scripts/: run_full_pipeline.py  run_pipeline.py  run_rebel_pipeline.py  run_workflow.py  train_gnn.py
src/: __init__.py
src/analytics/: __init__.py  metrics.py
src/data/: csv_loader.py  gdelt_loader.py  models.py  preprocess.py
src/gnn/: __init__.py  datasets.py  evaluate.py  inference.py  model.py  train.py
src/graph/: __init__.py  export.py  neo4j_loader.py
src/nlp/: __init__.py  entity_resolution.py  ner.py  rebel_pipeline.py  relation_extraction.py  sentence_embeddings.py
src/pipelines/: __init__.py  extract_and_load.py  train_gnn.py
src/utils/: __init__.py  config.py  io.py  logging.py
tests/: test_config_loader.py  test_csv_loader.py  test_entity_resolution.py  test_gnn_datasets.py  test_graph_export.py  test_graph_snapshot.py  test_metrics.py  test_rebel_pipeline.py  test_relation_extraction.py
